# purview-mip-sdk-sample

./: .env.example  .gitignore  README.md
docs/: mcp-scenario.md
labeler/: CMakeLists.txt  Dockerfile
labeler/src/: action.cpp  action.h  auth_delegate.cpp  auth_delegate.h  consent_delegate.cpp  consent_delegate.h  file_handler_observer.cpp  file_handler_observer.h  main.cpp  memory_stream.h  profile_observer.cpp  profile_observer.h
mcp-server/: requirements.txt  server.py
sample_files/: test_clean.docx  test_clean.pptx  test_clean.txt  test_clean.xlsx  test_confidential.docx  test_input.txt  test_labeled.docx  test_unlabeled.docx
sample_files/test_protected_files/: test_confidential_protected.docx  test_confidential_protected.pptx  test_confidential_protected.xlsx
scanner/: scan_content.py
scripts/: enable_audit.ps1  prepare_mip_sdk.sh  search_audit_log.ps1  setup_dlp_policy.ps1
